# ontop_keyboard

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: button.h.007BBFBF2D2E29C6.idx  keypress.cpp.18D4AA8F3901B642.idx  keypress.h.67268383CE8C79F2.idx  main.cpp.150A01FDE1C9D150.idx
resources/: resource.h  resource.rc
src/: button.cpp  button.h  clipboard.cpp  clipboard.h  color.h  dimensions.h  keypress.cpp  keypress.h  main.cpp  popup_menu.cpp  popup_menu.h  server.cpp  server.h  utils.h
